Fix margins for pagination controls; and update the alignment for contents in a table cell (middle)

--- a/assets/css/delorean.css
+++ b/assets/css/delorean.css
@@ -21,17 +21,18 @@ body {
     margin-bottom: 1rem;
     text-align: right;
 }
-    .material-icons {
-        font-size: 16px;
-        vertical-align: middle;
+    .controls .form-group {
+        margin-left: 1rem;
     }
     .controls .c-select {
-        margin: 0 .5rem;
-    }
-    .controls .form-group {
-        margin: 0 .5rem;
+        margin-left: 0.5rem;
     }
 
-.title {
-    font-size: 1.5rem;
+.material-icons {
+    font-size: 16px;
+    vertical-align: middle;
+}
+
+.table th, .table td {
+    vertical-align: middle;
 }
